Add workaround for glTex(Sub)Image3D on Intel Macs

On macOS machines with Intel GPUs, glTexImage3D/glTexSubImage3D performs
incorrectly when uploading a texture from the bound GL_PIXEL_UNPACK_BUFFER
and glPixelStorei has set the GL_UNPACK_IMAGE_HEIGHT parameter to be
greater than zero but not equal to the texture's height. It seems that
glTexImage3D/glTexSubImage3D uses the texture's height, and not
GL_UNPACK_IMAGE_HEIGHT's value, during the upload.

Work around this issue by uploading texture layer by layer.

BUG=654258
TEST=WebGL 2 conformance tests
     conformance2/textures/misc/tex-unpack-params.html
     deqp/functional/gles3/texturespecification/teximage3d_pbo_params.html
     deqp/functional/gles3/texturespecification/texsubimage3d_pbo_params.html
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2421823002
Cr-Commit-Position: refs/heads/master@{#425855}

Former-commit-id: a45987580db93baa6565efe4cc72380b8631c18b